tekton/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-app-route
spec:
  to:
    kind: Service
    name: hello-app-service
  port:
    targetPort: 80
